# rbca

./: .gitignore  Cargo.toml  README.md
desktop/: Cargo.toml  build.rs
desktop/src/: display.rs  emulator.rs  main.rs
logdbg/: Cargo.toml
logdbg/src/: main.rs
rbca_core/: Cargo.toml
rbca_core/src/: audio.rs  boot.rs  cartridge.rs  cpu.rs  emulator.rs  flags.rs  gpu.rs  ie_register.rs  instructions.rs  io_registers.rs  joypad.rs  lib.rs  memory.rs  memory_section.rs  mmu.rs  ppu.rs  registers.rs  timer.rs
rbca_core/src/cartridge/: empty.rs  mbc1.rs  rom_only.rs
rbca_core/src/emulator/: cpu.rs
rbca_core/src/emulator/cpu/: alu.rs  instructions.rs  registers.rs
rbca_core/src/instructions/: test_instructions.rs
rbca_core/src/mmu/: test_mmu.rs
rbca_core/src/ppu/: ppu_tests.rs
rbca_core/tests/: test_boot_rom.rs  test_cartridge.rs  test_cpu_instrs.rs  test_instr_timing.rs  test_interrupt_time.rs  test_mem_timing.rs
rbca_core/tests/common/: mod.rs
rbca_desktop/: Cargo.toml  build.rs
rbca_desktop/src/: arg_parser.rs  config.rs  emulator.rs  main.rs  palette.rs  scancodes.rs  utils.rs
rbca_desktop/src/palette/: preset_palettes.rs
terminal/: Cargo.toml
terminal/src/: main.rs
