[package]
name = "rbca_desktop"
version = "0.1.0"
edition = "2021"
authors = ["Max Gilmour"]
repository = "https://github.com/maxgmr/rbca"
build = "build.rs"

[dependencies]
camino = "1.1"
clap = { version = "4.5", features = ["cargo"] }
color-eyre = "0.6"
config = "0.14"
directories = "5.0"
rbca_core = { path = "../rbca_core" }
sdl2 = "0.37"
text_io = "0.1"

[build-dependencies]
vergen = { version = "9", features = ["build", "si"] }
