[package]
name = "rbca_desktop"
version = "1.0.0"
edition = "2021"
authors = ["Max Gilmour"]
repository = "https://github.com/maxgmr/rbca"
build = "build.rs"

[dependencies]
camino = { version = "1.1", features = ["serde1"] }
clap = { version = "4.5", features = ["cargo", "derive", "string"] }
color-eyre = "0.6"
config = "0.14"
directories = "5.0"
hex_color = { version = "3.0", features = ["serde"] }
rbca_core = { path = "../rbca_core" }
sdl2 = "0.37"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "3.1"
text_io = "0.1"

[build-dependencies]
vergen = { version = "9", features = ["build", "si"] }

[dev-dependencies]
pretty_assertions = "1.4"
